--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
    <title>Project 2 — JavaScript and P5</title>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
    <script src="sketch.js"></script>
-
+ <h1> Fish </h1>
+ <h2> Angel Ferrera </h2>
 </head>
 <body></body>
 </html>
